feat: v3版本结构函数化分离
