# internal/router/router.go
@@ -1,11 +1,16 @@
 package router
 
 import (
-	"go-demo-server/internal/controller"
-	"go-demo-server/internal/middleware"
+	"go-server/internal/middleware"
 
 	"github.com/gin-gonic/gin"
 )
+
+// type RouterDeps struct {
+// 	Logger      *log.Logger
+// 	Config      *viper.Viper
+// 	JWT         *jwt.JWT
+// }
 
 func SetupRouter() *gin.Engine {
 	r := gin.Default()
@@ -14,34 +19,16 @@ func SetupRouter() *gin.Engine {
 		c.String(200, "ok")
 	})
 
+	// 全局中间件
+	r.Use(
+		middleware.CORSMiddleware(),
+		// middleware.RequestLogMiddleware(bootstrap.Logger), // 依赖注入日志组件
+	)
+
 	api := r.Group("/api")
 
 	// ================= 用户模块 =================
-	user := api.Group("/user")
-	{
-		// ✅ 不需要登录
-		user.POST("/login", controller.Login)
-		user.POST("/register", controller.Create)
-
-		// ✅ 需要登录（只针对“自己”）
-		auth := user.Group("/")
-		auth.Use(middleware.AuthMiddleware())
-		{
-			auth.DELETE("/:id", controller.DeleteUser)
-			auth.GET("/info", controller.GetUserInfo) // 自己
-			auth.PUT("/info", controller.UpdateUser)  // 修改自己
-		}
-	}
-
-	// ================= 用户资源（别人） =================
-	users := api.Group("/users")
-	{
-		users.GET("", controller.GetUserList)       // 用户列表
-		users.GET("/list", controller.GetUserLists) // 分页用户列表
-
-		// 查看别人（是否需要登录看你业务）
-		users.GET("/:id", controller.GetUserDetail) // 👈 detail
-	}
+	InitUserRouter(api)
 
 	return r
 }
